# rules_vunit

./: .bazelrc  404.html  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  index.html  print.html  rules.html  searchindex.js  searchindex.json  simulators.html  toc.html  toc.js  version.bzl  vunit_activehdl_sim.html  vunit_ghdl_sim.html  vunit_modelsim_sim.html  vunit_nvc_sim.html  vunit_questa_sim.html  vunit_riviera_sim.html  vunit_test.html  vunit_toolchain.html
.bcr/: metadata.template.json  presubmit.yml  source.template.json
.github/: release_notes.template
.github/workflows/: bcr-publish.yaml  ci.yml  compile-requirements.yaml  lint.yml  release.yaml  release_prep.sh
docs/: BUILD.bazel  book.toml
docs/src/: SUMMARY.md  index.md  rules.md  simulators.md
examples/simple/: BUILD.bazel  MODULE.bazel  README.md  adder.vhd  requirements_linux_x86_64.txt  requirements_windows_x86_64.txt  tb_adder.vhd
tests/ghdl/: BUILD.bazel  tb_counter.vhd
tests/nvc/: BUILD.bazel  counter.vhd  tb_adder.vhd
tools/coverage/: BUILD.bazel  assert_lcov_has_hits.py  cobertura_to_lcov.py
tools/nvc_libdir_stage/: BUILD.bazel  nvc_libdir_stage.py
tools/repo_version/: BUILD.bazel  version_test.py
tools/requirements/: BUILD.bazel  dev_requirements.in  requirements_linux_x86_64.txt  requirements_macos_aarch64.txt
tools/rules_vunit_run/: BUILD.bazel  rules_vunit_run.py  rules_vunit_run_test.py
tools/run/: BUILD.bazel  run.py
tools/toolchains/: BUILD.bazel
tools/vunit_process_wrapper/: BUILD.bazel  vunit_process_wrapper.py
vunit/: BUILD.bazel  defs.bzl  vunit_activehdl_sim.bzl  vunit_ghdl_sim.bzl  vunit_modelsim_sim.bzl  vunit_nvc_sim.bzl  vunit_questa_sim.bzl  vunit_riviera_sim.bzl  vunit_test.bzl  vunit_toolchain.bzl
vunit/private/: BUILD.bazel  BUILD.vunit_hdl.bazel  vunit_hdl_llvm_jit_backend.patch  vunit_hdl_verilog_path.patch  vunit_precompiled_library_info.bzl  vunit_simulators.bzl  vunit_test.bzl  vunit_toolchain.bzl
vunit/private/simulators/: BUILD.bazel  vunit_activehdl.bzl  vunit_ghdl.bzl  vunit_modelsim.bzl  vunit_nvc.bzl  vunit_questa.bzl  vunit_riviera.bzl  vunit_sim_utils.bzl
vunit/toolchain/: BUILD.bazel
