load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "bzl_lib",
    srcs = glob(["*.bzl"]),
    visibility = ["//vunit/private:__pkg__"],
    deps = [
        "@rules_cc//cc/common",
        "@rules_venv//python:defs_bzl",
        "@rules_verilog//verilog:defs_bzl",
        "@rules_vhdl//vhdl:defs_bzl",
    ],
)
